# NppBeads

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  ROADMAP.md  STATUS.md
docs/: HOST_CHANGES_BACKLOG.md  PHASE3_5_TEST_MATRIX.md  PHASE3_TEST_MATRIX.md  PHASE4_TEST_MATRIX.md  PHASE5_TEST_MATRIX.md  PHASE6_TEST_MATRIX.md  USING_NPPBEADS.md
resources/: beads.icns  dmg-background.tiff
resources/viewer/: bridge.js  graph.js  index.html  viewer.js
resources/viewer/app/: activity.html  activity.js  app.css  app.js  board.html  board.js
shell-app/: Beads.entitlements  BeadsAppDelegate.h  BeadsAppDelegate.mm  BeadsMainWindowController.h  BeadsMainWindowController.mm  BeadsMenuBuilder.h  BeadsMenuBuilder.mm  Info.plist.in  main.mm
src/: BdCommandRunner.h  BdCommandRunner.mm  BdDataSource.h  BdDataSource.mm  BeadIdIndicator.h  BeadIdIndicator.mm  BeadsDataSource.h  BeadsPanel.h  BeadsPanel.mm  BeadsPoll.h  BeadsPoll.mm  BeadsProjectScanner.h  BeadsProjectScanner.mm  BeadsSchemeHandler.h  BeadsSchemeHandler.mm  BeadsWatcher.h  BeadsWatcher.mm  JsonlDataSource.h  JsonlDataSource.mm  NppBeads.mm
tools/: build-app.sh  build-release.sh  generate-dmg-background.py
